--- a/style.css
+++ b/style.css
@@ -1,34 +1,80 @@
-/* Template by freewebsitetemplates.com */
+#body .header div,
+#header {
+	margin: 0 auto;
+	width: 960px
+}
+
+#body .body .section a,
+#header ul li a {
+	text-align: center;
+	text-decoration: none
+}
+
+#body .about h2,
+#body .body .section a,
+#body .footer h3,
+#body h1,
+#header ul li a {
+	text-transform: uppercase
+}
+
+#body .blog ul li,
+#body .footer ul li {
+	background: url(images/border-dashed.gif) bottom left repeat-x
+}
+
+#body,
+#footer {
+	min-width: 960px
+}
+
+#body .blog,
+#body .body,
+#body .body .article,
+#body .footer,
+#body .footer .featured ul li,
+#body .header ul,
+#body .products div,
+#body .services div,
+#footer div,
+#header,
+#header ul {
+	overflow: hidden
+}
+
+#body .header div h3,
+#body .header div p,
+#footer div p,
+#header ul li a {
+	text-shadow: 1px 1px 1px #fff
+}
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
-	padding: 0;
+	padding: 0
 }
 
 #header {
-	margin: 0 auto;
-	padding: 0;
-	overflow: hidden;
-	width: 960px;
+	padding: 0
 }
 
 #header #logo {
 	float: left;
 	height: 144px;
-	width: 355px;
+	width: 355px
 }
 
 #header #logo img {
 	border: 0;
-	margin-top: 30px;
+	margin-top: 30px
 }
 
 #header ul {
 	float: right;
 	margin: 0;
-	padding: 70px 0 0 0;
-	overflow: hidden;
-	width: 605px;
+	padding: 70px 0 0;
+	width: 605px
 }
 
 #header ul li {
@@ -36,7 +82,7 @@ body {
 	float: left;
 	margin: 0;
 	padding: 0;
-	width: 121px;
+	width: 121px
 }
 
 #header ul li a,
@@ -45,7 +91,7 @@ body {
 #header ul li a:hover span,
 #header ul li.selected a,
 #header ul li.selected a span {
-	background: url(images/menu.gif);
+	background: url(images/menu.gif)
 }
 
 #header ul li a {
@@ -56,191 +102,177 @@ body {
 	height: 36px;
 	line-height: 36px;
 	margin: 0;
-	padding: 0 0 0 10px;
-	text-align: center;
-	text-decoration: none;
-	text-transform: uppercase;
-	text-shadow: 1px 1px 1px #fff;
+	padding: 0 0 0 10px
 }
 
 #header ul li a span {
 	background-position: -70px 0;
 	display: block;
 	margin: 0;
-	padding: 0 10px 0 0;
+	padding: 0 10px 0 0
 }
 
 #header ul li a:hover {
 	background-position: -186px -37px;
 	color: #346b84;
-	text-shadow: none;
+	text-shadow: none
 }
 
 #header ul li a:hover span {
-	background-position: -70px -37px;
+	background-position: -70px -37px
 }
 
 #header ul li.selected a {
 	background-position: 10px 36px;
 	color: #fff;
-	text-shadow: none;
+	text-shadow: none
 }
 
 #header ul li.selected a span {
-	background-position: -70px -74px;
+	background-position: -70px -74px
 }
 
 #body {
 	margin: 0;
-	padding: 0;
-	min-width: 960px;
+	padding: 0
 }
 
 #body .header {
-	background: url(https://mbits.ac.in/wp-content/themes/mbits/images/banner.jpg) repeat-x bottom center;
-	margin: 0 0 30px 0;
+	background: url(https://mbits.ac.in/wp-content/themes/mbits/images/banner.jpg) bottom center repeat-x;
+	margin: 0 0 30px
 }
 
 #body .header div {
-	height: 472px;
-	margin: 0 auto;
-	padding: 0;
-	width: 960px;
+	height: 472px
 }
 
 #body .header div div {
-	background: none;
-	margin: 0;
-	padding: 10% 0 0 50%;
 	height: 200px;
-	width: 490px;
+	width: 490px
 }
 
 #body .header div h3 {
-	color: #ffffff;
+	color: #fff;
 	font-size: 30px;
 	text-align: center;
 	line-height: 50px;
-	margin: 18px 0 0 0;
-	padding: 0;
-	text-shadow: 1px 1px 1px #fff;
+	margin: 18px 0 0;
+	padding: 0
 }
 
 #body .header div h3 span {
 	display: block;
-	font-size: 25px;
+	font-size: 25px
 }
 
+#body .body .article h4 a,
+#body .footer h3 a,
 #body .header div h3 a {
 	color: #2a4f5e;
-	text-decoration: none;
+	text-decoration: none
 }
 
-#body .header div h3 a:hover {
-	color: #507685;
+#body .body .article h4 a:hover,
+#body .body .section a:hover,
+#body .footer h3 a:hover,
+#body .header div h3 a:hover,
+#body .header div p a,
+#body .services h2 a:hover,
+#body .services h3 a:hover {
+	color: #507685
 }
 
 #body .header div p {
 	color: #507685;
 	font-size: 14px;
 	line-height: 24px;
-	margin: 12px 0 6px 0;
-	padding: 0;
-	text-shadow: 1px 1px 1px #fff;
+	margin: 12px 0 6px;
+	padding: 0
 }
 
-#body .header div p a {
-	color: #507685;
-}
-
-#body .header div p a:hover {
-	color: #2a4f5e;
+#body .about p a:hover,
+#body .blog h3 a:hover,
+#body .blog p a:hover,
+#body .body .article p a,
+#body .contact p a:hover,
+#body .header div p a:hover,
+#body .products p a:hover,
+#body .services h2 a,
+#body .services h3 a,
+#body .services p a:hover {
+	color: #2a4f5e
 }
 
 #body .header ul {
-	overflow: hidden;
 	margin: 0;
-	padding: 49px 0 0;
+	padding: 49px 0 0
 }
 
 #body .header ul li {
 	float: left;
 	list-style: none;
-	padding: 0 5px;
+	padding: 0 5px
 }
 
 #body .body {
 	border: 1px solid #e0e0e0;
-	margin: 0 auto 34px auto;
-	overflow: hidden;
+	margin: 0 auto 34px;
 	padding: 0 2px;
-	width: 954px;
+	width: 954px
 }
 
 #body .body div {
-	float: left;
+	float: left
 }
 
 #body .body .section {
-	background: url(images/bg-section.gif) repeat-x top left;
+	background: url(images/bg-section.gif) top left repeat-x;
 	height: 193px;
 	margin: 0;
 	padding: 35px 0 0 40px;
-	width: 186px;
+	width: 186px
 }
 
 #body .body .section img {
 	display: block;
+	border: 0
 }
 
 #body .body .section a {
 	color: #2a4f5e;
 	display: block;
 	font-size: 14px;
-	font-weight: bold;
+	font-weight: 700;
 	height: 145px;
-	text-align: center;
-	text-decoration: none;
-	text-transform: uppercase;
-	width: 145px;
-}
-
-#body .body .section a:hover {
-	color: #507685;
-}
-
-#body .body .section img {
-	border: 0;
+	width: 145px
 }
 
 #body .body .article {
-	background: url(images/bg-article.gif) no-repeat top center;
-	overflow: hidden;
+	background: url(images/bg-article.gif) top center no-repeat;
 	padding: 19px 16px;
-	width: 470px;
+	width: 470px
 }
 
 #body .body .article img {
 	border: 0;
 	float: left;
-	padding: 0 10px 0 0;
+	padding: 0 10px 0 0
 }
 
 #body .body .article h4 {
 	color: #2a4f5e;
 	font-size: 15px;
-	font-weight: bold;
+	font-weight: 700;
 	margin: 12px 0;
-	padding: 0;
+	padding: 0
 }
 
-#body .body .article h4 a {
-	color: #2a4f5e;
-	text-decoration: none;
-}
-
-#body .body .article h4 a:hover {
-	color: #507685;
+#body .footer .featured p,
+#body .footer div,
+#body .footer div ul,
+#body .footer li p {
+	margin: 0;
+	padding: 0
 }
 
 #body .body .article p {
@@ -248,112 +280,74 @@ body {
 	font-size: 14px;
 	line-height: 22px;
 	margin: 0;
-	padding: 0;
-}
-
-#body .body .article p a {
-	color: #2a4f5e;
+	padding: 0
 }
 
 #body .body .article p a:hover {
-	color: #346b84;
+	color: #346b84
 }
 
 #body .footer {
 	margin: 0 auto;
-	overflow: hidden;
-	padding: 0 0 15px 0;
-	width: 960px;
-}
-
-#body .footer div {
-	float: left;
-	margin: 0;
-	padding: 0;
-}
-
-#body .footer div ul {
-	margin: 0;
-	padding: 0;
+	padding: 0 0 15px;
+	width: 960px
 }
 
 #body .footer div ul li {
 	list-style: none;
 	margin: 0 0 15px;
-	padding: 0 0 15px;
+	padding: 0 0 15px
 }
 
 #body .footer h3 {
 	color: #2a4f5e;
-	font-size: 14px;
 	line-height: 26px;
-	margin: 0 0 12px 0;
+	margin: 0 0 12px;
 	padding: 0;
-	text-align: justify;
-	text-transform: uppercase;
-}
-
-#body .footer h3 a {
-	color: #2a4f5e;
-	text-decoration: none;
-}
-
-#body .footer h3 a:hover {
-	color: #507685;
+	text-align: justify
 }
 
 #body .footer .section {
 	padding: 0 10px;
-	width: 220px;
+	width: 220px
 }
 
-#body .footer ul li {
-	background: url(images/border-dashed.gif) repeat-x bottom left;
-}
-
+#body .blog ul li:last-child,
 #body .footer ul li:last-child {
-	background: none;
+	background: 0 0
 }
 
 #body .footer li p {
 	color: #5d5d5d;
-	font-size: 14px;
 	line-height: 20px;
-	margin: 0;
-	padding: 0;
-	text-align: justify;
+	text-align: justify
 }
 
 #body .footer li p a {
 	color: #5d5d5d;
-	text-decoration: underline;
+	text-decoration: underline
 }
 
 #body .footer li p a:hover {
-	color: #aeaeae;
+	color: #aeaeae
 }
 
 #body .footer li span {
 	color: #aeaeae;
 	display: block;
-	font-size: 10px;
-	line-height: 16px;
 	margin: 5px 0 0;
-	padding: 0;
+	padding: 0
 }
 
 #body .footer ul.news li p {
-	background: url(images/bullets.gif) no-repeat 0 8px;
-	padding: 0 0 0 15px;
+	background: url(images/bullets.gif) 0 8px no-repeat;
+	padding: 0 0 0 15px
 }
 
 #body .footer .featured {
+	margin: auto;
 	padding: 0 18px 0 24px;
-	width: 438px;
-}
-
-#body .footer .featured ul li {
-	overflow: hidden;
+	width: 438px
 }
 
 #body .footer .featured img {
@@ -362,70 +356,60 @@ body {
 	width: auto;
 	height: 100px;
 	margin: 0 20px 0 0;
-	padding: 1px;
+	padding: 1px
 }
 
-#body .footer .featured p {
-	margin: 0;
-	padding: 0;
-}
-
-#body .contact,
 #body .about,
-#body .services,
-#body .blog {
+#body .blog,
+#body .contact,
+#body .services {
 	margin: 0 auto;
-	padding: 25px 10px 50px 10px;
-	width: 940px;
+	padding: 25px 10px 50px;
+	width: 940px
 }
 
 #body h1 {
 	color: #2a4f5e;
 	font-size: 27px;
-	font-weight: bold;
+	font-weight: 700;
 	height: 74px;
 	line-height: 74px;
 	margin: 0;
 	padding: 0;
-	text-indent: 10px;
-	text-transform: uppercase;
+	text-indent: 10px
 }
 
 #body .contact p {
 	color: #7b7b7b;
 	font-size: 15px;
-	font-weight: bold;
+	font-weight: 700;
 	line-height: 26px;
 	margin: 0;
 	padding: 40px 0;
 	text-align: justify;
-	width: 830px;
+	width: 830px
 }
 
 #body .contact p a {
-	color: #7b7b7b;
-}
-
-#body .contact p a:hover {
-	color: #2a4f5e;
+	color: #7b7b7b
 }
 
 #body .contact div {
 	margin: 0;
-	padding: 0 0 30px 0;
+	padding: 0 0 30px
 }
 
 #body .contact div h3 {
 	color: #5d5d5d;
 	font-size: 14px;
-	font-weight: bold;
+	font-weight: 700;
 	margin: 0;
-	padding: 0 0 5px 0;
+	padding: 0 0 5px
 }
 
 #body .contact div ul {
 	margin: 0;
-	padding: 0 0 20px 0;
+	padding: 0 0 20px
 }
 
 #body .contact div ul li {
@@ -433,20 +417,19 @@ body {
 	font-size: 14px;
 	list-style: none;
 	margin: 0;
-	padding: 5px 0;
+	padding: 5px 0
 }
 
 #body .about div {
-	padding: 50px 0 0 0;
+	padding: 50px 0 0
 }
 
 #body .about h2 {
 	color: #2a4f5e;
 	font-size: 16px;
-	font-weight: bold;
+	font-weight: 700;
 	margin: 0;
-	padding: 0;
-	text-transform: uppercase;
+	padding: 0
 }
 
 #body .about p {
@@ -456,120 +439,94 @@ body {
 	margin: 10px 0 0;
 	padding: 0;
 	text-align: justify;
-	width: 830px;
+	width: 830px
 }
 
-#body .about p a {
-	color: #5d5d5d;
-}
-
-#body .about p a:hover {
+#body .services h2,
+#body .services h3,
+#body .services h4 {
 	color: #2a4f5e;
+	line-height: 24px;
+	text-transform: uppercase
+}
+
+#body .about p a,
+#body .blog h3 a,
+#body .blog p a,
+#body .products p a,
+#body .services p a {
+	color: #5d5d5d
 }
 
 #body .services div {
-	overflow: hidden;
 	margin: 0;
-	padding: 40px 0 0;
+	padding: 40px 0 0
 }
 
 #body .services h2 {
-	color: #2a4f5e;
 	font-size: 16px;
-	font-weight: bold;
-	line-height: 24px;
+	font-weight: 700;
 	margin: 0;
-	padding: 0;
-	text-transform: uppercase;
-}
-
-#body .services h2 a {
-	color: #2a4f5e;
-}
-
-#body .services h2 a:hover {
-	color: #507685;
+	padding: 0
 }
 
 #body .services h3 {
-	color: #2a4f5e;
 	font-size: 14px;
-	font-weight: bold;
-	line-height: 24px;
+	font-weight: 700;
 	margin: 15px 0 0;
-	padding: 0 30px 0 0;
-	text-transform: uppercase;
-}
-
-#body .services h3 a {
-	color: #2a4f5e;
-}
-
-#body .services h3 a:hover {
-	color: #507685;
+	padding: 0 30px 0 0
 }
 
 #body .services h4 {
-	color: #2a4f5e;
 	font-size: 16px;
-	font-weight: normal;
-	line-height: 24px;
+	font-weight: 400;
 	margin: 0;
-	padding: 0;
-	text-transform: uppercase;
+	padding: 0
 }
 
 #body .services p {
 	color: #5d5d5d;
 	font-size: 14px;
-	line-height: 24px;
-}
-
-#body .services p a {
-	color: #5d5d5d;
-}
-
-#body .services p a:hover {
-	color: #2a4f5e;
+	line-height: 24px
 }
 
 #body .services div ul {
 	float: left;
 	margin: 0;
 	padding: 20px 0 0;
-	width: 312px;
+	width: 312px
 }
 
 #body .services div ul li {
-	background: url(images/bullets.gif) no-repeat center left;
+	background: url(images/bullets.gif) center left no-repeat;
 	color: #5d5d5d;
 	font-size: 14px;
 	list-style: none;
 	margin: 0;
 	padding: 5px 0 5px 12px;
-	text-align: left;
+	text-align: left
 }
 
 #body .services div div {
 	overflow: hidden;
 	margin: 0;
-	padding: 0 0 5px 0;
+	padding: 0 0 5px
 }
 
 #body .services div div img {
 	float: left;
-	padding: 0 10px 0 0;
+	padding: 0 10px 0 0
 }
 
 #body .services div div p {
 	padding: 0 30px 0 0;
-	text-align: justify;
+	text-align: justify
 }
 
 #body .products {
 	margin: 0 auto;
-	padding: 25px 0 70px 0;
-	width: 960px;
+	padding: 25px 0 70px;
+	width: 960px
 }
 
 #body .products h2 {
@@ -578,7 +535,7 @@ body {
 	margin: 0;
 	text-align: center;
 	text-transform: uppercase;
-	padding: 90px 0 30px 0;
+	padding: 90px 0 30px
 }
 
 #body .products p {
@@ -587,21 +544,17 @@ body {
 	line-height: 24px;
 	margin: 0;
 	padding: 0 10px;
-	text-align: justify;
+	text-align: justify
 }
 
-#body .products p a {
-	color: #5d5d5d;
-}
-
-#body .products p a:hover {
-	color: #2a4f5e;
+#body .blog h2,
+#body .products div p {
+	font-size: 16px
 }
 
 #body .products div {
-	overflow: hidden;
-	margin: 0 0 45px 0;
-	padding: 0;
+	margin: 0 0 45px;
+	padding: 0
 }
 
 #body .products div div {
@@ -609,7 +562,7 @@ body {
 	margin: 0;
 	padding: 0 10px;
 	text-align: center;
-	width: 300px;
+	width: 300px
 }
 
 #body .products div div h3 {
@@ -617,111 +570,75 @@ body {
 	font-size: 16px;
 	line-height: 24px;
 	margin: 0;
-	padding: 0 0 10px 0;
+	padding: 0 0 10px;
 	text-align: justify;
-	text-transform: uppercase;
-}
-
-#body .products div p {
-	font-size: 16px;
+	text-transform: uppercase
 }
 
 #body .products div div p {
 	font-size: 14px;
 	margin: 0;
 	padding: 0;
-	text-align: justify;
-}
-
-#body .blog {
-	overflow: hidden;
+	text-align: justify
 }
 
 #body .blog div {
 	float: left;
-	padding: 60px 0 0 0;
-	width: 630px;
+	padding: 60px 0 0;
+	width: 630px
 }
 
 #body .blog ul {
 	float: left;
 	margin: 0;
 	padding: 38px 0 0 30px;
-	width: 280px;
+	width: 280px
 }
 
 #body .blog ul li {
-	background: url(images/border-dashed.gif) repeat-x bottom left;
 	list-style: none;
 	margin: 0;
-	padding: 22px 0;
-}
-
-#body .blog ul li:last-child {
-	background: none;
+	padding: 22px 0
 }
 
 #body .blog h2 {
 	color: #2a4f5e;
-	font-size: 16px;
 	margin: 0;
 	padding: 0;
-	text-transform: capitalize;
+	text-transform: capitalize
 }
 
-#body .blog h3 {
-	color: #5d5d5d;
-	font-size: 14px;
-	margin: 0;
-	padding: 0;
-	text-align: justify;
-}
-
-#body .blog h3 a {
-	color: #5d5d5d;
-}
-
-#body .blog h3 a:hover {
-	color: #2a4f5e;
-}
-
+#body .blog h3,
 #body .blog p {
 	color: #5d5d5d;
 	font-size: 14px;
-	line-height: 24px;
-	margin: 0;
-	padding: 0;
 	text-align: justify;
+	padding: 0;
+	margin: 0
 }
 
-#body .blog p a {
-	color: #5d5d5d;
-}
-
-#body .blog p a:hover {
-	color: #2a4f5e;
+#body .blog p {
+	line-height: 24px
 }
 
 #body .blog div p {
-	padding: 15px 0;
+	padding: 15px 0
 }
 
 #body .blog div p.article {
-	font-weight: bold;
+	font-weight: 700
 }
 
 #footer {
-	background: #f5f5f5 url(images/bg-footer.gif) repeat-x top left;
+	background: url(images/bg-footer.gif) top left repeat-x #f5f5f5;
 	margin: 0;
-	min-width: 960px;
-	padding: 0;
+	padding: 0
 }
 
 #footer div {
 	margin: 0 auto;
-	overflow: hidden;
 	padding: 26px 0 0;
-	width: 960px;
+	width: 960px
 }
 
 #footer div div {
@@ -729,34 +646,34 @@ body {
 	margin: 0;
 	padding: 0;
 	text-align: center;
-	width: 192px;
+	width: 192px
 }
 
 #footer div div img {
 	height: auto;
-	max-width: 80%;
+	max-width: 80%
 }
 
 #footer div div h3 {
 	color: #818a8c;
 	font-size: 12px;
-	font-weight: bold;
-	margin: 0 0 5px 0;
+	font-weight: 700;
+	margin: 0 0 5px;
 	padding: 0;
-	text-transform: uppercase;
+	text-transform: uppercase
 }
 
 #footer div div ul,
 #footer div div ul li {
 	margin: 0;
 	list-style: none;
-	padding: 0;
+	padding: 0
 }
 
 #footer div div ul li {
 	font-size: 12px;
 	line-height: 22px;
-	color: #818a8c;
+	color: #818a8c
 }
 
 .footer div a.facebook,
@@ -767,20 +684,25 @@ body {
 	text-indent: -99999em;
 	width: 40px;
 	height: 27px;
-	cursor: pointer;
+	cursor: pointer
 }
 
 .footer div a.facebook img,
 .footer div a.instagram img {
 	display: block;
-	max-width: 100%;
+	max-width: 100%
 }
 
 #footer div p {
 	color: #c1c1c1;
 	font-size: 12px;
 	margin: 0;
-	padding: 0 0 30px 0;
-	text-align: center;
-	text-shadow: 1px 1px 1px #fff;
+	padding: 0 0 30px;
+	text-align: center
+}
+
+@media (min-width: 1025px) {
+    #body .footer div {
+		float: left
+	}
 }
