--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@
 
 #body .blog ul li,
 #body .footer ul li {
-	background: url(images/border-dashed.gif) bottom left repeat-x
+	background: url(../images/border-dashed.gif) bottom left repeat-x
 }
 
 #body,
@@ -91,7 +91,7 @@ body {
 #header ul li a:hover span,
 #header ul li.selected a,
 #header ul li.selected a span {
-	background: url(images/menu.gif)
+	background: url(../images/menu.gif)
 }
 
 #header ul li a {
@@ -225,7 +225,7 @@ body {
 }
 
 #body .body .section {
-	background: url(images/bg-section.gif) top left repeat-x;
+	background: url(../images/bg-section.gif) top left repeat-x;
 	height: 193px;
 	margin: 0;
 	padding: 35px 0 0 40px;
@@ -247,7 +247,7 @@ body {
 }
 
 #body .body .article {
-	background: url(images/bg-article.gif) top center no-repeat;
+	background: url(../images/bg-article.gif) top center no-repeat;
 	padding: 19px 16px;
 	width: 470px
 }
@@ -339,7 +339,7 @@ body {
 }
 
 #body .footer ul.news li p {
-	background: url(images/bullets.gif) 0 8px no-repeat;
+	background: url(../images/bullets.gif) 0 8px no-repeat;
 	padding: 0 0 0 15px
 }
 
@@ -497,7 +497,7 @@ body {
 }
 
 #body .services div ul li {
-	background: url(images/bullets.gif) center left no-repeat;
+	background: url(../images/bullets.gif) center left no-repeat;
 	color: #5d5d5d;
 	font-size: 14px;
 	list-style: none;
@@ -626,7 +626,7 @@ body {
 }
 
 #footer {
-	background: url(images/bg-footer.gif) top left repeat-x #f5f5f5;
+	background: url(../images/bg-footer.gif) top left repeat-x #f5f5f5;
 	margin: 0;
 	padding: 0
 }
