about-page-responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,11 @@
+* {
+	box-sizing: border-box;
+}
+
 #body .header div,
 #header {
 	margin: 0 auto;
-	width: 960px
+	width: 960px;
 }
 
 #body .body .section a,
@@ -52,11 +56,15 @@ body {
 }
 
 #header {
+	position: sticky;
+	top: 0;
 	padding: 0;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
 	width: 100%;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	background-color: #fff;
 }
 
 #header .hamburger {
@@ -64,20 +72,20 @@ body {
 }
 
 #header #logo {
-	height: 144px;
+	
 	width: 355px;
 }
 
 #header #logo img {
 	border: 0;
-	margin-top: 30px;
+	margin: 20px 0;
 	object-fit: cover;
+	width: 220px;
 }
 
 #header ul {
-	float: right;
 	margin: 0;
-	padding: 70px 0 0;
+	/* padding: 70px 0 0; */
 	width: 605px
 }
 
@@ -95,14 +103,14 @@ body {
 #header ul li a:hover span,
 #header ul li.selected a,
 #header ul li.selected a span {
-	background: url(../images/menu.gif)
+	font-weight: bold;
 }
 
 #header ul li a {
 	background-position: 10px 0;
 	color: #2a4f5e;
 	display: block;
-	font-size: 14px;
+	font-size: 16px;
 	height: 36px;
 	line-height: 36px;
 	margin: 0;
@@ -128,7 +136,7 @@ body {
 
 #header ul li.selected a {
 	background-position: 10px 36px;
-	color: #fff;
+	color: #2a4f5e;
 	text-shadow: none
 }
 
@@ -144,6 +152,8 @@ body {
 #body .header {
 	background: url(../image/mbits-banner.png) bottom center repeat-x;
 	margin: 0 0 30px;
+	background-size: cover;
+	background-position: 50%;
 }
 
 #body .header div {
@@ -446,6 +456,12 @@ body {
 	padding: 0
 }
 
+#body .about h3{
+	color: #2a4f5e;
+	font-size: 14px;
+	font-weight: 700;
+}
+
 #body .about p {
 	color: #5d5d5d;
 	font-size: 14px;
@@ -643,6 +659,13 @@ body {
 	margin-top: 30px;
 }
 
+.about-department,
+.course,
+.facilities,
+.faculty{
+	margin-top: 30px;
+}
+
 .mission-vision, 
 .update-event,
 .offer {
@@ -654,7 +677,8 @@ body {
 
 .mission-vision div,
 .update-event div{
-	width: calc(50% - 30px);
+	flex: 1;
+	width: 50%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	padding: 10px;
 	border-radius: 5px;
@@ -669,7 +693,6 @@ body {
 }
 
 .update-event div{
-	width: calc(50% - 32px);
 	box-shadow: none;
 	border: 0.5px solid #5d5d5d;
 	border-radius: 5px;
@@ -694,6 +717,16 @@ body {
 	padding: 10px;
 }
 
+.about-college{
+	display: flex;
+	align-items: center;
+	gap: 20px;
+}
+
+.about-college img {
+	width: 290px;
+}
+
 #body #offer div p {
 	text-align: center;
 }
@@ -703,6 +736,39 @@ body {
     height: 250px;
     object-fit: cover;
 	margin-bottom: 10px;
+}
+
+dl {
+	border: 1px solid #ddd;
+	padding: 10px;
+	background-color: #f9f9f9;
+}
+
+.faculty div {
+	display: flex;
+	margin-top: 10px;
+	gap: 10px;
+}
+
+.faculty-profile {
+	display: flex;
+	min-height: max-content;
+	padding: 5px;
+	width: 50%;
+	gap: 10px;
+	/* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+	border: 0.5px solid #5d5d5d;
+	border-radius: 2px;
+	background-color: #f9f9f9;
+}
+
+.faculty-profile div{
+	display: block;
+	margin-top: 0;
+}
+
+.faculty-profile img {
+	height: 175px;
 }
 
 #footer {
@@ -785,6 +851,7 @@ body {
     transform: translateX(-100%);
     transition: 0.5s ease-in-out;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	z-index: 1;
 }
 
 .toggle-ul ul {
@@ -809,13 +876,17 @@ body {
     font-size: 20px;
 }
 
+#footer iframe {
+	width: 100%;
+}
+
 @media (min-width: 1025px) {
 	#body .footer div {
 		float: left
 	}
 }
 
-@media (max-width: 1000px){
+@media (max-width: 960px){
 	#header ul {
 		display: none;
 	}
@@ -836,8 +907,8 @@ body {
 	}
 
 	#header #logo img {
-		margin-top: 0;
-		height: 50px;
+		margin: 10px 0;
+		width: 175px;
 	}
 
 	.card-container {
@@ -846,27 +917,47 @@ body {
 
 	.mission-vision div, 
 	.update-event div {
+		flex: none;
 		width: 100%;
 		box-shadow: none;
+		padding: 0;
 	}
 
 	.offer {
 		justify-content: center;
 	}
 
+	.offer div {
+		width: 29%;
+	}
+
 	.offer div img {
-		height: 100px;
-		width: 100px;
+		width: 100%;
+		height: 100%;
+		margin-bottom: 0;
 	}
 
-	/* #body .about h2 {
-		font-size: 32px;
+	.about-college {
+		flex-wrap: wrap;
 	}
 
-	#body .about p {
-		font-size: 28px;
-		line-height: 48px;
-	} */
+	.about-college img {
+		width: 100%;
+		margin-top: 10px;
+	}
+
+	.faculty div {
+		flex-wrap: wrap;
+	}
+
+	.faculty-profile {
+		width: 100%;
+		display: flex;
+	}
+
+	.faculty-profile div {
+		flex: 1;
+	}
 
 	#body .header div,
 	#header,
@@ -903,5 +994,31 @@ body {
 	#body .header div h3 {
 		font-size: 20px;
 		line-height: 25px;
+	}
+
+	#footer div {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 20px;
+	}
+
+	#footer div div {
+		width: 100%;
+	}
+
+	#footer div div img{
+		width: 192px;
+	}
+
+	#footer .social-media {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		width: 150px;
+	}
+
+	#footer iframe {
+		width: calc(100% - 20px);
 	}
 }
